# haskell_lessons

./: .gitignore  algo  algo.cpp  algo.hs  algo2.hs  gtk.hs  input.txt  lab1  lab1.cpp  lab2  lab2.cpp  lab3  lab3.cpp  lens_test.hs  math_parse.cpp  maybe.cpp  output.txt  words.hs
font-gen/: font-gen.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
hspfm/: algo.hs  hspfm.cabal  main.hs  makefile  run
learn2/: learn2.cabal
learn2/.stack-work/install/x86_64-linux/lts-8.21/8.0.2/lib/x86_64-linux-ghc-8.0.2/learn2-0.1.0.0-BYJBRM22o4Q4bSuiN4h3Vt/: Lib.dyn_hi
learn2/.stack-work/install/x86_64-linux/lts-8.21/8.0.2/pkgdb/: learn2-0.1.0.0-BYJBRM22o4Q4bSuiN4h3Vt.conf  package.cache
learn2/app/: .#Main.hs  Main.hs
sander/: mainwindow.cpp  mainwindow.h  node.cpp  node.h  sander.pro  tree.cpp  tree.h
t1/: t1.cabal
t1/app/: Main.hs
t2/: t2-exe.prof  t2.cabal
t2/.stack-work/install/x86_64-linux/lts-9.4/8.0.2/flag-cache/: t2-0.1.0.0-14Gg9zCko73IYxZB4AF3aY
t2/.stack-work/install/x86_64-linux/lts-9.4/8.0.2/lib/x86_64-linux-ghc-8.0.2/t2-0.1.0.0-14Gg9zCko73IYxZB4AF3aY/: Lib.dyn_hi  Lib.hi  Lib.p_hi
t2/.stack-work/install/x86_64-linux/lts-9.4/8.0.2/pkgdb/: package.cache  t2-0.1.0.0-14Gg9zCko73IYxZB4AF3aY.conf
t2/app/: Main.hs
trees/: cnode.cpp  cnode.h  ctree.cpp  ctree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  trees.pro
