name: hspfm
version: 0.0.1
build-type: Simple
cabal-version: >= 1.2
executable hspfm
    main-is: 		 main.hs
--    other-modules: 	 Algo
    ghc-options:       	-threaded -rtsopts -Wall -fno-warn-unused-do-bind -O3
    build-depends:       base,
                         brick,
                         vty >= 5.18.1,
                         text,
                         microlens,
                         microlens-th

--library
--    main-is: 	algo.h
--    build-depends:	base
--    ghc-options: 	-threaded -rtsopts -Wall -fno-warn-unused-do-bind -O3
